--- a/Last Orb.vcxproj
+++ b/Last Orb.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="model.h" />
+    <ClInclude Include="playerController.h" />
     <ClInclude Include="shader.h" />
   </ItemGroup>
   <ItemGroup>
