--- a/Last Orb.vcxproj.filters
+++ b/Last Orb.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="playerController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="backgroundShader.vs">
